--- a/frontend/src/Portfolio/Portfolio.scss
+++ b/frontend/src/Portfolio/Portfolio.scss
@@ -1,14 +1,23 @@
 .portfolio-section {
     display: grid;
     grid-template-columns: 0.35fr 1fr;
+    width: 100%;
 
     grid-template-rows: min-content 1fr;
     grid-column-gap: 3rem;
 
     @include respond(tab-port) {
-        padding: 1rem 3rem;
+        width: 95%;
+        margin: 0 auto;
         grid-template-columns: none;
         grid-row-gap: 3rem;
+    }
+
+    @include respond(small-phone) {
+        &__left, &__right {
+            width: 80%;
+            margin: 0 auto;
+        }
     }
 
     &__left {
@@ -113,7 +122,8 @@
 
             & img {
                 max-width: 100%;
-                height: 100%;
+                height: 16rem;
+                width: 100%;
                 object-fit: cover;
                 z-index: -1;
             }
